<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.search.SearchFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_Search"
        android:layout_width="match_parent"
        android:layout_height="486dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_search"
            android:layout_width="144dp"
            android:layout_height="39dp"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/movie_s_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_search"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="22222" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/search"
            app:layout_constraintBottom_toBottomOf="@+id/et_search"
            app:layout_constraintEnd_toStartOf="@+id/et_search"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_search"
            app:layout_constraintVertical_bias="1.0" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/black"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_search" />

        <EditText
            android:id="@+id/et_with_keywords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/with_keywords"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            android:autofillHints="" />

        <EditText
            android:id="@+id/et_without_keywords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/without_keywords"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/et_with_keywords"
            app:layout_constraintStart_toStartOf="@+id/et_with_keywords"
            app:layout_constraintTop_toBottomOf="@+id/et_with_keywords"
            android:autofillHints="" />

        <EditText
            android:id="@+id/et_with_cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/with_cast"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/et_without_keywords"
            app:layout_constraintStart_toStartOf="@+id/et_without_keywords"
            app:layout_constraintTop_toBottomOf="@+id/et_without_keywords"
            android:autofillHints="" />

        <EditText
            android:id="@+id/et_with_genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/with_genres"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/et_with_cast"
            app:layout_constraintStart_toStartOf="@+id/et_with_cast"
            app:layout_constraintTop_toBottomOf="@+id/et_with_cast"
            android:autofillHints="" />

        <CheckBox
            android:id="@+id/chb_include_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/include_video"
            app:layout_constraintEnd_toEndOf="@+id/et_with_genres"
            app:layout_constraintStart_toStartOf="@+id/et_with_genres"
            app:layout_constraintTop_toBottomOf="@+id/et_with_genres" />

        <Button
            android:id="@+id/btn_discover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/discover"
            app:layout_constraintEnd_toEndOf="@+id/chb_include_video"
            app:layout_constraintStart_toStartOf="@+id/chb_include_video"
            app:layout_constraintTop_toBottomOf="@+id/chb_include_video" />


    </androidx.constraintlayout.widget.ConstraintLayout>



    <LinearLayout
        android:id="@+id/ll_search_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:spanCount="2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_return"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cornerRadius="8dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/return1" />
    </LinearLayout>


</LinearLayout>